--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
+    "angular-bootstrap-autocomplete": "^1.0.1",
     "bootstrap": "^5.1.3",
+    "ngx-pagination": "^6.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
